input fields added for every form option

--- a/app/views/forms/_form1099k.html.erb
+++ b/app/views/forms/_form1099k.html.erb
@@ -32,52 +32,57 @@
                                    <img width="100%" src="/media/1099k.png" />
                                     
                                     <!-- fields -->
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="filers_name_street" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="payment_settlement_entity" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="electronic_payment_fac" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="payment_card" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="third_party_network" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="payees_name" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="street_address" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="city_town_state" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="pses_name" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="account_num" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="2nd_tin_not" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="filers_fin" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="payees_taxpayer" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="1a" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="1b" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="2" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="3" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="4" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5a" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5b" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5c" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5d" value="">
+                                    <input class="abs" style="top: 9%;left: 2%;width: 44%;height: 21%;" name="filers_name_street" value="" type="text">
+                                    <input class="abs" name="payment_settlement_entity" value="" style="" type="text">
+                                    <input class="abs" name="electronic_payment_fac" value="" style="" type="text">
+                                    <input class="abs" name="payment_card" value="" style="" type="text">
+                                    <input class="abs" name="third_party_network" value="" style="" type="text">
+                                    <input class="abs" style="top: 46%;left: 2%;width: 44%;height: 7%;" name="payees_name" value="" type="text">
+                                    <input class="abs" style="top: 56%;left: 2%;width: 44%;height: 10%;" name="street_address" value="" type="text">
+                                    <input class="abs" style="top: 69%;left: 2%;width: 44%;" name="city_town_state" value="" type="text">
+                                    <input class="abs" style="top: 76%;left: 2%;width: 44%;height: 6%;" name="pses_name" value="" type="text">
+                                    <input class="abs" style="top: 86%;left: 2%;width: 36%;height: 6%;" name="account_num" value="" type="text">
+                                    <input class="abs" name="2nd_tin_not" value="" style="" type="text">
+                                    <input class="abs" style="top: 6.2%;left: 47%;width: 17.5%;" name="filers_fin" value="" type="text">
+                                    <input class="abs" style="top: 13%;left: 47%;width: 17.5%;" name="payees_taxpayer" value="" type="text">
+                                    <input class="abs" style="top: 23.2%;left: 48.5%;width: 16%;height: 3%;" name="1a" value="" type="text">
+                                    <input class="abs" style="top: 31%;left: 48.5%;width: 16%;" name="1b" value="" type="text">
+                                    <input class="abs" style="top: 29.5%;left: 66%;width: 17.5%;height: 4.7%;" name="2" value="" type="text">
+                                    <input class="abs" name="3" value="" style="top: 39.5%;left: 47%;width: 17.5%;height: 3.2%;" type="text">
+                                    <input class="abs" name="4" value="" style="top: 39.5%;left: 67%;width: 16%;height: 3.2%;" type="text">
+                                    <input class="abs" name="5a" value="" style="top: 46.5%;left: 48.5%;width: 16%;height: 3.2%;" type="text">
+                                    <input class="abs" name="5b" value="" style="top: 46.5%;left: 67%;width: 16%;height: 3.2%;" type="text">
+                                    <input class="abs" name="5c" value="" style="top: 53%;left: 48.5%;width: 16%;height: 3.2%;" type="text">
+                                    <input class="abs" name="5d" value="" style="top: 53%;left: 67%;width: 16%;height: 3.2%;" type="text">
 
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5e" value="">
+                                    <input class="abs" name="5e" value="" style="top: 59.5%;left: 48.5%;width: 16%;height: 3.2%;" type="text">
                                     
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5f" value="">
+                                    <input class="abs" name="5f" value="" style="top: 59.5%;left: 67%;width: 16%;height: 3.2%;" type="text">
 
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5g" value="">
+                                    <input class="abs" name="5g" value="" style="top: 66.5%;left: 48.5%;width: 16%;height: 3.2%;" type="text">
 
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5h" value="">
+                                    <input class="abs" name="5h" value="" style="top: 66.5%;left: 67%;width: 16%;height: 3.2%;" type="text">
 
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5i" value="">
+                                    <input class="abs" name="5i" value="" style="top: 72.5%;left: 48.5%;width: 16%;height: 3.2%;" type="text">
 
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5j" value="">
+                                    <input class="abs" name="5j" value="" style="top: 72.5%;left: 67%;width: 16%;height: 3.2%;" type="text">
 
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5k" value="">
+                                    <input class="abs" name="5k" value="" style="top: 79.5%;left: 48.5%;width: 16%;height: 3.2%;" type="text">
 
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5l" value="">
+                                    <input class="abs" name="5l" value="" style="top: 79.5%;left: 67%;width: 16%;height: 3.2%;" type="text">
 
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="6" value="">
+                                    <input class="abs" name="6" value="" style="top: 86%;left: 48.5%;width: 16%;height: 3.2%;" type="text">
 
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="7" value="">
+                                    <input class="abs" name="7" value="" style="top: 86%;left: 67%;width: 16%;height: 3.2%;" type="text">
 
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="8" value="">
+                                    <input class="abs" name="8" value="" style="top: 86%;left: 85.7%;width: 13%;height: 3.2%;" type="text">
 
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="8_2" value="">
+                                    <input class="abs" name="8_2" value="" style="top: 90%;left: 85.7%;width: 13%;height: 3%;" type="text">
+
+                                
+
+                                
+
 
                                 
 
