--- a/app/views/forms/_form1099misc.html.erb
+++ b/app/views/forms/_form1099misc.html.erb
@@ -32,37 +32,38 @@
                                    <img width="100%" src="/media/1099misc.png" />
                                     
                                     <!-- fields -->
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="payers_name_street" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="payers_fin" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="recipients_id" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="recipients_name" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="street_address" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="city_town_state" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="account_number" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="fatca_filing_req" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="2nd_tin_not" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="1" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="2" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="3" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="4" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="6" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="7" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="8" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="9" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="10" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="11" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="12" value="">
+                                     <input class="abs" style="top: 10%;left: 2.5%;width: 43%;height: 20%;" name="payers_name_street" value="" type="text">
+                                    <input class="abs" style="top: 34%;left: 2.5%;width: 21%;height: 6.5%;" name="payers_fin" value="" type="text">
+                                    <input class="abs" name="recipients_id" value="" style="top: 34%;left: 25%;width: 21%;height: 6.5%;" type="text">
+                                    <input class="abs" name="recipients_name" value="" style="top: 46.5%;left: 2.5%;width: 43.5%;height: 6.5%;" type="text">
+                                    <input class="abs" name="street_address" value="" style="top: 56.5%;left: 2.5%;width: 43.5%;height: 6.5%;" type="text">
+                                    <input class="abs" name="city_town_state" value="" style="top: 66%;left: 2.5%;width: 43.5%;height: 6.5%;" type="text">
+                                    <input class="abs" name="account_number" value="" style="top: 76%;left: 2.5%;width: 27.5%;height: 6.5%;" type="text">
+                                    <input class="abs" name="fatca_filing_req" value="" style="" type="text">
+                                    <input class="abs" name="2nd_tin_not" value="" style="" type="text">
+                                    <input class="abs" style="top: 7%;left: 49%;width: 15%;height: 7%;" name="1" value="" type="text">
+                                    <input class="abs" name="2" value="" style="top: 17%;left: 49%;width: 15%;height: 7%;" type="text">
+                                    <input class="abs" name="3" value="" style="top: 26.5%;left: 49%;width: 15%;height: 4%;" type="text">
+                                    <input class="abs" name="4" value="" style="top: 27%;left: 67%;width: 16%;height: 3.5%;" type="text">
+                                    <input class="abs" style="top: 34%;left: 49%;width: 15%;height: 9%;" name="5" value="" type="text">
+                                    <input class="abs" name="6" value="" style="top: 34%;left: 67%;width: 16%;height: 9%;" type="text">
+                                    <input class="abs" style="top: 47%;left: 49%;width: 15%;height: 9%;" name="7" value="" type="text">
+                                    <input class="abs" name="8" value="" style="top: 49%;left: 67%;width: 16%;height: 7%;" type="text">
+                                    <input class="abs" name="9" value="" style="" type="text">
+                                    <input class="abs" name="10" value="" style="top: 59%;left: 67%;width: 15%;height: 7%;" type="text">
+                                    <input class="abs" name="11" value="" style="top: 67%;left: 48.5%;width: 15%;height: 6%;" type="text">
+                                    <input class="abs" name="12" value="" style="top: 67%;left: 67%;width: 15%;height: 6%;" type="text">
 
 
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="13" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="14" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="15a" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="15b" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="16" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="16_2" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="17" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="18" value=""> <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="18_2" value="">
+                                    <input class="abs" name="13" value="" style="top: 78%;left: 48.5%;width: 15.5%;height: 4.5%;" type="text">
+                                    <input class="abs" name="14" value="" style="top: 78%;left: 67.5%;width: 15.5%;height: 4.5%;" type="text">
+                                    <input class="abs" name="15a" value="" style="top: 85.5%;left: 3.5%;width: 19.5%;height: 6.5%;" type="text">
+                                    <input class="abs" name="15b" value="" style="top: 85.5%;left: 26%;width: 19.5%;height: 6.5%;" type="text">
+                                    <input class="abs" style="top: 85.5%;left: 48.5%;width: 16%;" name="16" value="" type="text">
+                                    <input class="abs" name="16_2" value="" style="top: 89.4%;left: 48.5%;width: 16%;height: 3%;" type="text">
+                                    <input class="abs" name="17" value="" style="top: 85.5%;left: 65.5%;width: 17.5%;" type="text">
+                                    <input class="abs" name="18" value="" style="top: 85.5%;left: 85.5%;width: 13.5%;height: 3.5%;" type="text"> <input class="abs" name="18_2" value="" style="top: 90%;left: 85.5%;width: 13.5%;height: 2.5%;" type="text">
+
 
 
 
