--- a/app/views/forms/_form1099oid.html.erb
+++ b/app/views/forms/_form1099oid.html.erb
@@ -32,30 +32,30 @@
                                    <img width="100%" src="/media/1099oid.png" />
                                     
                                     <!-- fields -->
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="payers_name_street" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="payers_fin" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="recipients_id" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="recipients_name" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="street_address" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="city_town_address" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="fatca_filing_req" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="account_number" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="2nd_tin_not" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="1" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="2" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="3" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="4" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="6" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="7" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="8" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="9" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="10" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="11" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="12" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="13" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="14" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="14_2" value="">
+                                    <input class="abs" name="payers_name_street" value="" style="top: 9%;left: 1.5%;width: 44%;height: 20%;" type="text">
+                                    <input class="abs" name="payers_fin" value="" style="top: 33%;left: 1.5%;width: 21%;height: 9%;" type="text">
+                                    <input class="abs" name="recipients_id" value="" style="top: 33%;left: 24.7%;width: 21%;height: 9%;" type="text">
+                                    <input class="abs" name="recipients_name" value="" style="top: 46%;left: 1.7%;width: 44%;height: 6%;" type="text">
+                                    <input class="abs" name="street_address" value="" style="top: 56%;left: 1.7%;width: 44%;height: 6%;" type="text">
+                                    <input class="abs" name="city_town_address" value="" style="top: 66%;left: 1.7%;width: 44%;height: 6%;" type="text">
+                                    <input class="abs" name="fatca_filing_req" value="" style="" type="text">
+                                    <input class="abs" name="account_number" value="" style="top: 85.5%;left: 1.7%;width: 36%;height: 6%;" type="text">
+                                    <input class="abs" name="2nd_tin_not" value="" style="" type="text">
+                                    <input class="abs" style="top: 6.8%;left: 48.5%;width: 16.5%;height: 6%;" name="1" value="" type="text">
+                                    <input class="abs" name="2" value="" style="top: 22.8%;left: 48%;width: 17%;height: 6%;" type="text">
+                                    <input class="abs" name="3" value="" style="top: 32.5%;left: 48%;width: 17%;height: 3.5%;" type="text">
+                                    <input class="abs" name="4" value="" style="top: 32.5%;left: 67%;width: 17%;height: 3.5%;" type="text">
+                                    <input class="abs" name="5" value="" style="top: 39.3%;left: 48%;width: 17%;height: 6.5%;" type="text">
+                                    <input class="abs" name="6" value="" style="top: 39.3%;left: 67%;width: 17%;height: 6.5%;" type="text">
+                                    <input class="abs" name="7" value="" style="top: 49.3%;left: 47%;width: 37%;height: 12.5%;" type="text">
+                                    <input class="abs" name="8" value="" style="top: 67.7%;left: 48%;width: 17%;height: 4.5%;" type="text">
+                                    <input class="abs" name="9" value="" style="top: 65.7%;left: 67%;width: 17%;height: 6.5%;" type="text">
+                                    <input class="abs" name="10" value="" style="top: 75.7%;left: 48%;width: 17%;height: 6.5%;" type="text">
+                                    <input class="abs" name="11" value="" style="top: 75.7%;left: 67%;width: 17%;height: 6.5%;" type="text">
+                                    <input class="abs" name="12" value="" style="top: 85.5%;left: 47%;width: 4.5%;height: 3.5%;" type="text">
+                                    <input class="abs" name="13" value="" style="top: 85.5%;left: 52.5%;width: 15%;height: 3.5%;" type="text">
+                                    <input class="abs" name="14" value="" style="top: 85.5%;left: 69.8%;width: 14%;height: 3.5%;" type="text">
+                                    <input class="abs" name="14_2" value="" style="top: 89.7%;left: 69.8%;width: 14%;height: 2.5%;" type="text">
 
                                   <!-- fields -->
                                     
