--- a/app/views/forms/_form1099q.html.erb
+++ b/app/views/forms/_form1099q.html.erb
@@ -32,21 +32,22 @@
                                    <img width="100%" src="/media/1099q.png" />
                                     
                                     <!-- fields -->
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="payers_trusteets_name_address" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="payers_trusteets_fin" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="recipients_taxpayer_id" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="recipients_name" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="street_address" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="city_town_state" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="account_number" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="1" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="2" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="3" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="4" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5_private" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5_state" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5_coverdeli_esa" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="6" value="">
+                                    <input class="abs" style="top: 15%;left: 1.5%;width: 44.5%;height: 19%;" name="payers_trusteets_name_address" value="" type="text">
+                                    <input class="abs" style="top: 39.5%;left: 1.5%;width: 22%;height: 5.5%;" name="payers_trusteets_fin" value="" type="text">
+                                    <input class="abs" style="top: 39.5%;left: 24%;width: 22%;" name="recipients_taxpayer_id" value="" type="text">
+                                    <input class="abs" style="top: 49.5%;left: 1.5%;width: 44.5%;height: 10%;" name="recipients_name" value="" type="text">
+                                    <input class="abs" style="top: 64%;left: 1.5%;width: 44.5%;" name="street_address" value="" type="text">
+                                    <input class="abs" style="top: 74%;left: 1.5%;width: 44.5%;" name="city_town_state" value="" type="text">
+                                    <input class="abs" name="account_number" value="" style="top: 84%;left: 1.5%;width: 44.5%;" type="text">
+                                    <input class="abs" style="top: 10.5%;left: 48%;width: 17%;height: 10%;" name="1" value="" type="text">
+                                    <input class="abs" name="2" value="" style="top: 25.5%;left: 48%;width: 17%;height: 10%;" type="text">
+                                    <input class="abs" name="3" value="" style="top: 39.5%;left: 48%;width: 17%;height: 5.5%;" type="text">
+                                    <input class="abs" name="4" value="" style="" type="text">
+                                    <input class="abs" name="5_private" value="" style="" type="text">
+                                    <input class="abs" name="5_state" value="" style="" type="text">
+                                    <input class="abs" name="5_coverdeli_esa" value="" style="" type="text">
+                                    <input class="abs" name="6" value="" style="" type="text">
+                                   
                                    
                                   <!-- fields -->
                                     
