--- a/app/views/forms/_form1097.html.erb
+++ b/app/views/forms/_form1097.html.erb
@@ -35,34 +35,35 @@
                           <div id="fields-container" class="form1097">
                              <img width="100%" src="/media/1097btc.png" />
 
-                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="issuers_name_address" value="">
-                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="issuers_fin" value="">
-                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="recipients_fin" value="">
-                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="recipients_name" value="">
-                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="street_address" value="">
-                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="city_town_state" value="">
-                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="issuer_of_bon" value="">
-                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="entity_or_person" value="">
-                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="1" value="">
-                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="2a" value="">
-                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="2b" value="">
-                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="3" value="">
-                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="4" value="">
+                              <input class="abs" style="top: 10%;left: 1.5%;width: 44.5%;height: 20%;" name="issuers_name_address" value="" type="text">
+                              <input class="abs" name="issuers_fin" value="" style="top: 35.5%;left: 1.5%;width: 21.5%;height: 8%;" type="text">
+                              <input class="abs" name="recipients_fin" value="" style="top: 35.5%;left: 24.5%;width: 21.5%;height: 8%;" type="text">
+                              <input class="abs" name="recipients_name" value="" style="top: 46.5%;left: 1.5%;width: 44.5%;height: 6.7%;" type="text">
+                              <input class="abs" name="street_address" value="" style="top: 56.3%;left: 1.5%;width: 44.5%;height: 6.7%;" type="text">
+                              <input class="abs" name="city_town_state" value="" style="top: 65.8%;left: 1.5%;width: 44.5%;height: 6.7%;" type="text">
+                              <input class="abs" name="issuer_of_bon" value="" style="" type="text">
+                              <input class="abs" name="entity_or_person" value="" style="" type="text">
+                              <input class="abs" style="top: 7.5%;left: 49%;width: 16%;height: 6.5%;" name="1" value="" type="text">
+                              <input class="abs" name="2a" value="" style="top: 17.3%;left: 47%;width: 18%;height: 6.5%;" type="text">
+                              <input class="abs" name="2b" value="" style="top: 27%;left: 47%;width: 37%;height: 6.5%;" type="text">
+                              <input class="abs" name="3" value="" style="top: 36.8%;left: 47%;width: 18%;height: 6.5%;" type="text">
+                              <input class="abs" name="4" value="" style="top: 34.8%;left: 67%;width: 17%;height: 8.5%;" type="text">
 
 
-                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5a" value="">
-                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5b" value="">
-                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5c" value="">
-                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5d" value="">
-                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5e" value="">
-                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5f" value="">
-                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5g" value="">
-                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5h" value="">
-                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5i" value="">
-                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5j" value="">
-                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5k" value="">
-                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5i" value="">
-                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="6" value="">
+                              <input class="abs" name="5a" value="" style="top: 46.4%;left: 48.5%;width: 16.5%;height: 3.5%;" type="text">
+                              <input class="abs" name="5b" value="" style="top: 46.4%;left: 67.5%;width: 16.5%;height: 3.5%;" type="text">
+                              <input class="abs" name="5c" value="" style="top: 53%;left: 48.5%;width: 16.5%;height: 3.5%;" type="text">
+                              <input class="abs" name="5d" value="" style="top: 53%;left: 67.5%;width: 16.5%;height: 3.5%;" type="text">
+                              <input class="abs" name="5e" value="" style="top: 59.5%;left: 48.5%;width: 16.5%;height: 3.5%;" type="text">
+                              <input class="abs" name="5f" value="" style="top: 59.5%;left: 67.5%;width: 16.5%;height: 3.5%;" type="text">
+                              <input class="abs" name="5g" value="" style="top: 66%;left: 48.5%;width: 16.5%;height: 3.5%;" type="text">
+                              <input class="abs" name="5h" value="" style="top: 66%;left: 67.5%;width: 16.5%;height: 3.5%;" type="text">
+                              <input class="abs" name="5i" value="" style="top: 72.5%;left: 48.5%;width: 16.5%;height: 3.5%;" type="text">
+                              <input class="abs" name="5j" value="" style="top: 72.5%;left: 67.5%;width: 16.5%;height: 3.5%;" type="text">
+                              <input class="abs" name="5k" value="" style="top: 79%;left: 48.5%;width: 16.5%;height: 3.5%;" type="text">
+                              <input class="abs" name="5i" value="" style="top: 79%;left: 67.5%;width: 16.5%;height: 3.5%;" type="text">
+                              <input class="abs" name="6" value="" style="top: 85.5%;left: 47%;width: 37%;height: 6.5%;" type="text">
+
 
               
                               
