--- a/app/views/forms/_form1098.html.erb
+++ b/app/views/forms/_form1098.html.erb
@@ -35,28 +35,28 @@
 <!-- end label parts -->  
                           <div id="fields-container" class="form1098">
                              <img width="100%" src="/media/1098.png" />
-                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="recipients_lenders_name_address" value="">
+                               <input class="abs" style="top: 9.5%;left: 1.5%;width: 45%;height: 20%;" name="recipients_lenders_name_address" value="" type="text">
 
-                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="recipient_lenders_fin" value="">
-                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="payers_borrowers_taxpayer_id" value="">
-                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="payers_borrowers_name" value="">
-                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="street_name" name="" value="">
-                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="city_town_state" value="">
-                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="account_number" value="">
-                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="1" value="">
-                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="2" value="">
-                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="3" value="">
-                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="4" value="">
-                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5" value="">
-                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="6" value="">
-                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="7" value="">
-                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="8" value="">
-                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="9" value="">
-                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="10" value="">
-                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="11" value="">
+                              <input class="abs" style="top: 36%;left: 1.5%;width: 21%;" name="recipient_lenders_fin" value="" type="text">
+                              <input class="abs" name="payers_borrowers_taxpayer_id" value="" style="top: 36%;left: 23.7%;width: 22.5%;" type="text">
+                              <input class="abs" style="top: 46.3%;left: 1.5%;width: 45%;height: 6.5%;" name="payers_borrowers_name" value="" type="text">
+                              <input class="abs" name="" value="" style="top: 56.3%;left: 1.5%;width: 45%;height: 6.5%;" type="street_name">
+                              <input class="abs" style="top: 66%;left: 1.5%;width: 45%;height: 6.5%;" name="city_town_state" value="" type="text">
+                              <input class="abs" style="top: 85.5%;left: 1.5%;width: 45%;height: 6.8%;" name="account_number" value="" type="text">
+                              <input class="abs" style="top: 26.5%;left: 48.8%;width: 34.5%;" name="1" value="" type="text">
+                              <input class="abs" name="2" value="" style="top: 34.5%;left: 48.8%;width: 16%;" type="text">
+                              <input class="abs" name="3" value="" style="top: 33.6%;left: 65.8%;width: 17.5%;height: 4.5%;" type="text">
+                              <input class="abs" name="4" value="" style="top: 42.8%;left: 48.8%;width: 16%;height: 3.5%;" type="text">
+                              <input class="abs" name="5" value="" style="top: 42.8%;left: 67.4%;width: 15.7%;height: 3.5%;" type="text">
+                              <input class="abs" name="6" value="" style="top: 49.8%;left: 48.8%;width: 34.3%;height: 3.3%;" type="text">
+                              <input class="abs" name="7" value="" style="" type="text">
+                              <input class="abs" name="8" value="" style="top: 69.8%;left: 47.8%;width: 35.3%;height: 5.8%;" type="text">
+                              <input class="abs" name="9" value="" style="top: 81.8%;left: 47.8%;width: 35.3%;height: 10.4%;" type="text">
+                              <input class="abs" name="10" value="" style="top: 75.8%;left: 1.6%;width: 21%;height: 5.8%;" type="text">
+                              <input class="abs" name="11" value="" style="top: 75.8%;left: 24%;width: 22%;height: 5.8%;" type="text">
                     
 
-                              
+                  
                               <input type="hidden" name="unique_id" value="<%= @form_fields['unique_id'] %>">
                               <input type="hidden" name="form_id" value="1098.png"> 
                           </div><!-- fields-container -->
