--- a/app/views/forms/_form1099g.html.erb
+++ b/app/views/forms/_form1099g.html.erb
@@ -33,27 +33,27 @@
 
 
                                     <!-- fields -->
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="payers__name_address" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="payers_fin" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="recipients_id" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="recipients_name" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="street_address" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="city_town_state" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="account_number" value="">
+                                    <input class="abs" style="top: 13%;left: 1.5%;width: 45%;height: 21%;" name="payers__name_address" value="" type="text">
+                                    <input class="abs" style="top: 38.4%;left: 1.5%;width: 22%;height: 5%;" name="payers_fin" value="" type="text">
+                                    <input class="abs" style="top: 38.3%;left: 24.3%;width: 22%;height: 5%;" name="recipients_id" value="" type="text">
+                                    <input class="abs" style="top: 48.3%;left: 1.5%;width: 45%;height: 10%;" name="recipients_name" value="" type="text">
+                                    <input class="abs" style="top: 63%;left: 1.5%;width: 45%;height: 5%;" name="street_address" value="" type="text">
+                                    <input class="abs" style="top: 72.5%;left: 1.5%;width: 45%;height: 5%;" name="city_town_state" value="" type="text">
+                                    <input class="abs" style="top: 82.4%;left: 1.5%;width: 45%;height: 5%;" name="account_number" value="" type="text">
                                     
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="1" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="2" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="3" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="4" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="6" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="7" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="8" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="9" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="10a" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="10b" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="11" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="11_2" value="">
+                                    <input class="abs" style="top: 10%;left: 48.5%;width: 17%;height: 9%;" name="1" value="" type="text">
+                                    <input class="abs" style="top: 28%;left: 48.5%;width: 17%;height: 5%;" name="2" value="" type="text">
+                                    <input class="abs" style="top: 38.5%;left: 48%;width: 17%;height: 5%;" name="3" value="" type="text">
+                                    <input class="abs" style="top: 38.5%;left: 67.5%;width: 17%;height: 5%;" name="4" value="" type="text">
+                                    <input class="abs" name="5" value="" style="top: 48.5%;left: 48.5%;width: 17%;height: 5%;" type="text">
+                                    <input class="abs" style="top: 48.5%;left: 67.5%;width: 17%;height: 5%;" name="6" value="" type="text">
+                                    <input class="abs" name="7" value="" style="top: 58%;left: 48.5%;width: 17%;height: 5%;" type="text">
+                                    <input class="abs" name="8" value="" style="" type="text">
+                                    <input class="abs" name="9" value="" style="top: 67.5%;left: 48.5%;width: 17%;height: 5%;" type="text">
+                                    <input class="abs" name="10a" value="" style="top: 77.5%;left: 47%;width: 7.5%;height: 5%;" type="text">
+                                    <input class="abs" name="10b" value="" style="top: 77.5%;left: 55.5%;width: 14%;height: 5%;" type="text">
+                                    <input class="abs" name="11" value="" style="top: 77.5%;left: 71.5%;width: 12.5%;height: 5%;" type="text">
+                                    <input class="abs" style="top: 84%;left: 71.5%;width: 12.5%;height: 4%;" name="11_2" value="" type="text">
                                     
                                   <!-- fields -->
                                     
