--- a/app/views/forms/_form1099h.html.erb
+++ b/app/views/forms/_form1099h.html.erb
@@ -32,26 +32,26 @@
                                    <img width="100%" src="/media/1099h.png" />
                                     
                                     <!-- fields -->
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="issuers_providers_name_address" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="issuers_providers_fin" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="issuers_providers_id" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="recipients_name" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="street_address" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="city_town_address" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="1" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="2" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="3" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="4" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="6" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="7" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="8" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="9" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="10" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="11" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="12" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="13" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="14" value="">
+                                    <input class="abs" style="top: 13%;left: 1.5%;width: 44%;height: 16%;" name="issuers_providers_name_address" value="" type="text">
+                                    <input class="abs" style="top: 33.5%;left: 1.5%;width: 22%;" name="issuers_providers_fin" value="" type="text">
+                                    <input class="abs" style="top: 33.5%;left: 24.5%;width: 21%;" value="" name="recipients_id" type="text">
+                                    <input class="abs" style="top: 44%;left: 1.5%;width: 44.5%;height: 14%;" name="recipients_name" value="" type="text">
+                                    <input class="abs" style="top: 63%;left: 1.5%;width: 44.5%;height: 5%;" name="street_address" value="" type="text">
+                                    <input class="abs" style="top: 73%;left: 1.5%;width: 44.5%;" name="city_town_address" value="" type="text">
+                                    <input class="abs" style="top: 10.5%;left: 48.5%;width: 16%;height: 4%;" name="1" value="" type="text">
+                                    <input class="abs" style="top: 22%;left: 47%;width: 18%;height: 7%;" name="2" value="" type="text">
+                                    <input class="abs" style="top: 33.5%;left: 48.5%;width: 16.5%;height: 5.5%;" name="3" value="" type="text">
+                                    <input class="abs" style="top: 43.5%;left: 48.5%;width: 16.5%;" name="4" value="" type="text">
+                                    <input class="abs" name="5" value="" style="top: 53.5%;left: 48.5%;width: 16.5%;" type="text">
+                                    <input class="abs" name="6" value="" style="top: 63.5%;left: 48.5%;width: 16.5%;" type="text">
+                                    <input class="abs" name="7" value="" style="top: 73.3%;left: 48.5%;width: 16.5%;height:5%;" type="text">
+                                    <input class="abs" name="8" value="" style="top: 83%;left: 48.5%;width: 16.5%;" type="text">
+                                    <input class="abs" name="9" value="" style="top: 34%;left: 67%;width: 16.5%;height: 5%;" type="text">
+                                    <input class="abs" name="10" value="" style="top: 44%;left: 67%;width: 16.5%;height: 5%;" type="text">
+                                    <input class="abs" name="11" value="" style="top: 54%;left: 67%;width: 16.5%;height: 5%;" type="text">
+                                    <input class="abs" name="12" value="" style="top: 63.5%;left: 67%;width: 16.5%;height: 5%;" type="text">
+                                    <input class="abs" name="13" value="" style="top: 73.5%;left: 67%;width: 16.5%;height: 5%;" type="text">
+                                    <input class="abs" name="14" value="" style="top: 83.5%;left: 67%;width: 16.5%;height: 5%;" type="text">
                                     
                                   <!-- fields -->
                                     
