--- a/app/views/forms/_form1099int.html.erb
+++ b/app/views/forms/_form1099int.html.erb
@@ -32,34 +32,34 @@
                                    <img width="100%" src="/media/1099int.png" />
                                     
                                     <!-- fields -->
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="payers_name_address" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="payers_fin" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="recipients_id" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="recipients_name" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="street_address" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="city_town_state" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="fatca_filing_req" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="account_number" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="2nd_tin_not" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="payers_rtn" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="1" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="2" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="3" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="4" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="6" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="7" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="8" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="9" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="10" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="11" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="12" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="13" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="14" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="15" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="16" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="17" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="17_2" value="">
+                                    <input class="abs" style="top: 9.5%;left: 1.5%;width: 44%;height: 20%;" name="payers_name_address" value="" type="text">
+                                    <input class="abs" style="top: 33.8%;left: 1.5%;width: 22%;height: 6.8%;" name="payers_fin" value="" type="text">
+                                    <input class="abs" name="recipients_id" value="" style="top: 33.8%;left: 24%;width: 22%;height: 6.8%;" type="text">
+                                    <input class="abs" name="recipients_name" value="" style="top: 46%;left: 1.5%;width: 44.5%;height: 6.8%;" type="text">
+                                    <input class="abs" name="street_address" value="" style="top: 56%;left: 1.5%;width: 44.5%;height: 6.8%;" type="text">
+                                    <input class="abs" name="city_town_state" value="" style="top: 66%;left: 1.5%;width: 44.5%;height: 6.8%;" type="text">
+                                    <input class="abs" name="fatca_filing_req" value="" style="" type="text">
+                                    <input class="abs" name="account_number" value="" style="top: 85.5%;left: 1.5%;width: 36.5%;height: 6.8%;" type="text">
+                                    <input class="abs" name="2nd_tin_not" value="" style="" type="text">
+                                    <input class="abs" name="payers_rtn" value="" style="top: 7.5%;left: 47%;width: 18%;height: 6%;" type="text">
+                                    <input class="abs" name="1" value="" style="top: 17.5%;left: 48%;width: 16.5%;height: 6%;" type="text">
+                                    <input class="abs" name="2" value="" style="top: 26.5%;left: 48%;width: 35.5%;height: 7%;" type="text">
+                                    <input class="abs" name="3" value="" style="top: 36.5%;left: 48%;width: 35.5%;height: 6.7%;" type="text">
+                                    <input class="abs" name="4" value="" style="top: 46.5%;left: 48%;width: 16.5%;height: 3%;" type="text">
+                                    <input class="abs" name="5" value="" style="top: 46.5%;left: 67%;width: 16.5%;height: 3%;" type="text">
+                                    <input class="abs" name="6" value="" style="top: 52.5%;left: 48%;width: 16.7%;height: 3.3%;" type="text">
+                                    <input class="abs" name="7" value="" style="top: 52.5%;left: 66%;width: 17.3%;height: 3.4%;" type="text">
+                                    <input class="abs" name="8" value="" style="top: 59.5%;left: 48%;width: 16.7%;height: 6.4%;" type="text">
+                                    <input class="abs" name="9" value="" style="top: 59.5%;left: 67%;width: 16.7%;height: 6.4%;" type="text">
+                                    <input class="abs" name="10" value="" style="top: 69.5%;left: 48%;width: 16.7%;height: 6.4%;" type="text">
+                                    <input class="abs" name="11" value="" style="top: 69.5%;left: 66.7%;width: 16.7%;height: 6.4%;" type="text">
+                                    <input class="abs" name="12" value="" style="top: 79%;left: 48%;width: 16.7%;height: 3.5%;" type="text">
+                                    <input class="abs" name="13" value="" style="top: 79%;left: 66.6%;width: 16.7%;height: 3.5%;" type="text">
+                                    <input class="abs" name="14" value="" style="top: 87.5%;left: 47%;width: 17.7%;height: 4.2%;" type="text">
+                                    <input class="abs" name="15" value="" style="top: 85.5%;left: 65.5%;width: 4.7%;height: 3.6%;" type="text">
+                                    <input class="abs" name="16" value="" style="top: 85.5%;left: 71%;width: 12.2%;height: 3.6%;" type="text">
+                                    <input class="abs" name="17" value="" style="top: 85.5%;left: 85.5%;width: 13.2%;height: 3.6%;" type="text">
+                                    <input class="abs" name="17_2" value="" style="top: 89.4%;left: 85.5%;width: 13.2%;height: 3%;" type="text">
                                   <!-- fields -->
                                     
                                     <input type="hidden" name="unique_id" value="<%= @form_fields['unique_id'] %>">
