--- a/app/views/forms/_form1099ltc.html.erb
+++ b/app/views/forms/_form1099ltc.html.erb
@@ -32,27 +32,26 @@
                                    <img width="100%" src="/media/1099ltc.png" />
                                     
                                     <!-- fields -->
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="payers_name_street" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="payers_fin" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="policyholders_id" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="policyholders_name" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="street_address" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="city_town_state" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="account_num" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="qualifield_contract" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="1" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="2" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="per_diem" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="reimbursed_amount" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="insureds_taxpayer_id" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="insureds_name" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="street_address" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="city_town_state" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="check_if_applicable" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="chronically_ill" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="terminally_ill" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="date_certifed" value="">
-                                   
+                                   <input class="abs" style="top: 13%;left: 1.5%;width: 44%;height: 20%;" name="payers_name_street" value="" type="text">
+                                    <input class="abs" style="top: 38.5%;left: 1.5%;width: 21.5%;height: 5%;" name="payers_fin" value="" type="text">
+                                    <input class="abs" name="policyholders_id" value="" style="top: 38.5%;left: 24.5%;width: 21.5%;height: 5%;" type="text">
+                                    <input class="abs" style="top: 49%;left: 1.5%;width: 44.5%;height: 9%;" name="policyholders_name" value="" type="text">
+                                    <input class="abs" style="top: 63.5%;left: 1.5%;width: 44.5%;" name="street_address" value="" type="text">
+                                    <input class="abs" style="top: 73%;left: 1.5%;width: 44.5%;" name="city_town_state" value="" type="text">
+                                    <input class="abs" style="top: 83%;left: 1.5%;width: 29%;" name="account_num" value="" type="text">
+                                    <input class="abs" name="qualifield_contract" value="" style="" type="text">
+                                    <input class="abs" style="top: 13%;left: 48.5%;width: 16.5%;height: 11%;" name="1" value="" type="text">
+                                    <input class="abs" name="2" value="" style="top: 32%;left: 48.5%;width: 16.5%;height: 7%;" type="text">
+                                    <input class="abs" name="per_diem" value="" style="" type="text">
+                                    <input class="abs" name="reimbursed_amount" value="" style="" type="text">
+                                    <input class="abs" style="top: 39%;left: 66%;width: 18%;height: 10%;" name="insureds_taxpayer_id" value="" type="text">
+                                    <input class="abs" name="insureds_name" value="" style="top: 53%;left: 47.5%;width: 36%;height: 6%;" type="text">
+                                    <input class="abs" name="street_address" value="" style="top: 63.2%;left: 47.5%;width: 36%;height: 5.8%;" type="text">
+                                    <input class="abs" name="city_town_state" value="" style="top: 73.2%;left: 47.5%;width: 36%;height: 5.8%;" type="text">
+                                    <input class="abs" name="check_if_applicable" value="" style="" type="text">
+                                    <input class="abs" name="chronically_ill" value="" style="" type="text">
+                                    <input class="abs" name="terminally_ill" value="" style="" type="text">
+                                    <input class="abs" name="date_certifed" value="" style="top: 83.2%;left: 74%;width: 10%;height: 5.5%;" type="text">
                                   <!-- fields -->
                                     
                                     <input type="hidden" name="unique_id" value="<%= @form_fields['unique_id'] %>">
