--- a/app/views/forms/_form1099patr.html.erb
+++ b/app/views/forms/_form1099patr.html.erb
@@ -32,24 +32,24 @@
                                    <img width="100%" src="/media/1099patr.png" />
                                     
                                     <!-- fields -->
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="payers_name_street" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="payers_fin" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="recipients_id" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="recipients_name" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="street_address" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="city_town_state" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="account_number" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="2nd_tin_not" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="1" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="2" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="3" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="4" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="6" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="7" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="8" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="9" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="10" value="">
+                                   <input class="abs" name="payers_name_street" value="" style="top: 16%;left: 2%;width: 44%;height: 19%;" type="text">
+                                    <input class="abs" style="top: 40%;left: 1.5%;width: 22%;height: 5%;" name="payers_fin" value="" type="text">
+                                    <input class="abs" name="recipients_id" value="" style="top: 40%;left: 24.5%;width: 21.7%;height: 5%;" type="text">
+                                    <input class="abs" name="recipients_name" value="" style="top: 49.5%;left: 1.5%;width: 44.7%;height: 10%;" type="text">
+                                    <input class="abs" name="street_address" value="" style="top: 63.5%;left: 1.5%;width: 44.7%;height: 5.5%;" type="text">
+                                    <input class="abs" name="city_town_state" value="" style="top: 73%;left: 1.5%;width: 44.7%;height: 5.5%;" type="text">
+                                    <input class="abs" name="account_number" value="" style="top: 82.5%;left: 1.5%;width: 36.7%;height: 5.5%;" type="text">
+                                    <input class="abs" name="2nd_tin_not" value="" style="" type="text">
+                                    <input class="abs" style="top: 12%;left: 48%;width: 17%;" name="1" value="" type="text">
+                                    <input class="abs" name="2" value="" style="top: 21%;left: 48%;width: 17%;" type="text">
+                                    <input class="abs" name="3" value="" style="top: 30.5%;left: 48%;width: 17%;" type="text">
+                                    <input class="abs" name="4" value="" style="top: 40%;left: 48%;width: 17%;" type="text">
+                                    <input class="abs" name="5" value="" style="top: 53.5%;left: 48%;width: 17%;" type="text">
+                                    <input class="abs" name="6" value="" style="top: 53.5%;left: 67%;width: 16.5%;height: 5.5%;" type="text">
+                                    <input class="abs" name="7" value="" style="top: 63.5%;left: 67%;width: 16.5%;height: 5.5%;" type="text">
+                                    <input class="abs" name="8" value="" style="top: 73%;left: 48%;width: 16.5%;height: 5.5%;" type="text">
+                                    <input class="abs" name="9" value="" style="top: 73%;left: 66.8%;width: 16.5%;height: 5.5%;" type="text">
+                                    <input class="abs" name="10" value="" style="top: 82.5%;left: 48%;width: 35.5%;height: 5.5%;" type="text">
                                    
                                   <!-- fields -->
                                     
