--- a/app/views/forms/_form1099r.html.erb
+++ b/app/views/forms/_form1099r.html.erb
@@ -32,42 +32,43 @@
                                    <img width="100%" src="/media/1099r.png" />
                                     
                                     <!-- fields -->
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="payers_name_address" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="payers_fin" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="recipients_id" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="recipients_name" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="street_address" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="city_town_state" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="fatca_filing_req" value="">
+                                     <input class="abs" style="top: 10%;left: 1.5%;width: 44%;height: 19%;" name="payers_name_address" value="" type="text">
+                                    <input class="abs" name="payers_fin" value="" style="top: 33%;left: 1.5%;width: 21.5%;height: 9%;" type="text">
+                                    <input class="abs" name="recipients_id" value="" style="top: 33%;left: 24.5%;width: 21.5%;height: 9%;" type="text">
+                                    <input class="abs" name="recipients_name" value="" style="top: 46%;left: 1.5%;width: 44.5%;height: 9%;" type="text">
+                                    <input class="abs" name="street_address" value="" style="top: 59%;left: 1.5%;width: 44.5%;height: 6%;" type="text">
+                                    <input class="abs" name="city_town_state" value="" style="top: 68.5%;left: 1.5%;width: 44.5%;height: 3%;" type="text">
+                                    <input class="abs" name="fatca_filing_req" value="" style="" type="text">
+<input class="abs" name="account_number" value="" style="top: 84.5%;left: 1.5%;width: 44.5%;height: 6.5%;" type="text">
 
 
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="1" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="2a" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="2b" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="3" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="4" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="6" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="7" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="8" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="9a" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="9b" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="10" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="11" value="">
+                                    <input class="abs" style="top: 7%;left: 48.5%;width: 16%;height: 6%;" name="1" value="" type="text">
+                                    <input class="abs" name="2a" value="" style="top: 17%;left: 48.5%;width: 16%;height: 6%;" type="text">
+                                    <input class="abs" name="2b" value="" style="" type="text">
+                                    <input class="abs" name="3" value="" style="top: 35%;left: 48.5%;width: 16%;height: 7%;" type="text">
+                                    <input class="abs" name="4" value="" style="top: 35%;left: 67.5%;width: 16%;height: 7%;" type="text">
+                                    <input class="abs" name="5" value="" style="top: 52%;left: 48.2%;width: 17%;height: 3.7%;" type="text">
+                                    <input class="abs" name="6" value="" style="top: 50%;left: 67.2%;width: 17%;height: 5.7%;" type="text">
+                                    <input class="abs" name="7" value="" style="top: 61.5%;left: 47%;width: 12.7%;height: 3.7%;" type="text">
+                                    <input class="abs" name="8" value="" style="top: 59%;left: 67%;width: 11.7%;height: 6.2%;" type="text"><input class="abs" value="" style="top: 59%;left: 79.4%;width: 4.7%;height: 6.2%;" name="percent" type="text">
+                                    <input class="abs" name="9a" value="" style="top: 68.5%;left: 57%;width: 6.7%;height: 3.2%;" type="text">
+                                    <input class="abs" name="9b" value="" style="top: 68.5%;left: 67.5%;width: 16.7%;height: 3.2%;" type="text">
+                                    <input class="abs" name="10" value="" style="top: 76.9%;left: 2.4%;width: 20.7%;height: 4.2%;" type="text">
+                                    <input class="abs" name="11" value="" style="top: 77.6%;left: 24%;width: 12.7%;height: 3.6%;" type="text">
 
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="12" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="12_2" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="13" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="13_2" value="">
+                                    <input class="abs" name="12" value="" style="top: 74.9%;left: 48.4%;width: 16.7%;height: 3.2%;" type="text">
+                                    <input class="abs" name="12_2" value="" style="top: 78.9%;left: 48.4%;width: 16.7%;height: 2.5%;" type="text">
+                                    <input class="abs" name="13" value="" style="top: 74.9%;left: 66%;width: 18%;height: 3.3%;" type="text">
+                                    <input class="abs" name="13_2" value="" style="top: 78.9%;left: 66%;width: 18%;height: 2.5%;" type="text">
 
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="14" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="14_2" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="15" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="15_2" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="16" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="16_2" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="17" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="17_2" value="">
+                                    <input class="abs" name="14" value="" style="top: 74.9%;left: 86%;width: 13%;height: 3.3%;" type="text">
+                                    <input class="abs" name="14_2" value="" style="top: 78.9%;left: 86%;width: 13%;height: 2.5%;" type="text">
+                                    <input class="abs" name="15" value="" style="top: 84.9%;left: 48.5%;width: 16.5%;height: 3%;" type="text">
+                                    <input class="abs" name="15_2" value="" style="top: 88.4%;left: 48.5%;width: 16.5%;height: 3%;" type="text">
+                                    <input class="abs" name="16" value="" style="top: 85%;left: 66%;width: 18%;height: 3%;" type="text">
+                                    <input class="abs" name="16_2" value="" style="top: 88.5%;left: 66%;width: 18%;height: 3%;" type="text">
+                                    <input class="abs" name="17" value="" style="top: 85%;left: 86.2%;width: 13%;height: 3%;" type="text">
+                                    <input class="abs" name="17_2" value="" style="top: 88.5%;left: 86.2%;width: 13%;height: 3%;" type="text">
                                   <!-- fields -->
                                     
                                     <input type="hidden" name="unique_id" value="<%= @form_fields['unique_id'] %>">
