--- a/app/views/forms/_form1099s.html.erb
+++ b/app/views/forms/_form1099s.html.erb
@@ -32,20 +32,19 @@
                                    <img width="100%" src="/media/1099s.png" />
                                     
                                     <!-- fields -->
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="filers_name_address" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="filers_fid" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="transferors_id" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="transferors_name" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="street_address" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="city_town_state" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="account_number" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="1" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="2" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="3" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="4" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="6" value="">
-                                    
+                                    <input class="abs" style="top: 13%;left: 1%;width: 45%;height: 21%;" name="filers_name_address" value="" type="text">
+                                    <input class="abs" name="filers_fid" value="" style="top: 39%;left: 1%;width: 22%;height: 5%;" type="text">
+                                    <input class="abs" name="transferors_id" value="" style="top: 39%;left: 24%;width: 22%;height: 5%;" type="text">
+                                    <input class="abs" name="transferors_name" value="" style="top: 49%;left: 1%;width: 45%;height: 10%;" type="text">
+                                    <input class="abs" name="street_address" value="" style="top: 64%;left: 1%;width: 45%;height: 5%;" type="text">
+                                    <input class="abs" name="city_town_state" value="" style="top: 74%;left: 1%;width: 45%;height: 5%;" type="text">
+                                    <input class="abs" name="account_number" value="" style="top: 84%;left: 1%;width: 45%;height: 5%;" type="text">
+                                    <input class="abs" style="top: 9%;left: 47%;width: 18%;height: 10%;" name="1" value="" type="text">
+                                    <input class="abs" name="2" value="" style="top: 24%;left: 48.5%;width: 16.5%;height: 10%;" type="text">
+                                    <input class="abs" name="3" value="" style="top: 39%;left: 47%;width: 37%;height: 15%;" type="text">
+                                    <input class="abs" name="4" value="" style="" type="text">
+                                    <input class="abs" name="5" value="" style="" type="text">
+                                    <input class="abs" name="6" value="" style="top: 83.5%;left: 48.5%;width: 35.5%;height: 5%;" type="text">
                                   <!-- fields -->
                                     
                                     <input type="hidden" name="unique_id" value="<%= @form_fields['unique_id'] %>">
