--- a/app/views/forms/_form1099sa.html.erb
+++ b/app/views/forms/_form1099sa.html.erb
@@ -32,21 +32,20 @@
                                    <img width="100%" src="/media/1099sa.png" />
                                     
                                     <!-- fields -->
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="trustees_payers_name_address" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="payers_fin" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="recipients_id" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="recipients_name" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="street_address" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="city_town_state" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="account_number" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="1" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="2" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="3" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="4" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5_hsa" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5_archer_msa" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5_ma_msa" value="">
-                                    
+                                    <input class="abs" style="top: 13%;left: 1%;width: 45%;height: 21%;" name="trustees_payers_name_address" value="" type="text">
+                                    <input class="abs" name="payers_fin" value="" style="top: 39%;left: 1%;width: 22%;height: 5%;" type="text">
+                                    <input class="abs" name="recipients_id" value="" style="top: 39%;left: 24%;width: 22%;height: 5%;" type="text">
+                                    <input class="abs" name="recipients_name" value="" style="top: 49%;left: 1%;width: 45%;height: 10%;" type="text">
+                                    <input class="abs" name="street_address" value="" style="top: 64%;left: 1%;width: 45%;height: 5%;" type="text">
+                                    <input class="abs" name="city_town_state" value="" style="top: 74%;left: 1%;width: 45%;height: 5%;" type="text">
+                                    <input class="abs" name="account_number" value="" style="top: 84%;left: 1%;width: 45%;height: 5%;" type="text">
+                                    <input class="abs" style="top: 39%;left: 49%;width: 16%;height: 5%;" name="1" value="" type="text">
+                                    <input class="abs" name="2" value="" style="top: 39%;left: 68%;width: 16%;height: 5%;" type="text">
+                                    <input class="abs" name="3" value="" style="top: 49%;left: 47%;width: 18%;height: 10%;" type="text">
+                                    <input class="abs" name="4" value="" style="top: 49%;left: 67.5%;width: 16.5%;height: 10%;" type="text">
+                                    <input class="abs" name="5_hsa" value="" style="" type="text">
+                                    <input class="abs" name="5_archer_msa" value="" style="" type="text">
+                                    <input class="abs" name="5_ma_msa" value="" style="" type="text">
                                   <!-- fields -->
                                     
                                     <input type="hidden" name="unique_id" value="<%= @form_fields['unique_id'] %>">
