--- a/app/views/forms/_form3921.html.erb
+++ b/app/views/forms/_form3921.html.erb
@@ -36,19 +36,19 @@
                              <img width="100%" src="/
 media/3921.png" />
                               <!-- fields -->
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="transferors_name_address" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="transferors_fin" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="employees_id" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="employees_name" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="street_address" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="city_town_state" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="account_number" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="1" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="2" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="3" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="4" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="6" value="">
+                                    <input class="abs" style="top: 13%;left: 1.5%;width: 44%;height: 21%;" name="transferors_name_address" value="" type="text">
+                                    <input class="abs" style="top: 39%;left: 1.5%;width: 21.5%;height: 5.5%;" name="transferors_fin" value="" type="text">
+                                    <input class="abs" style="top: 39%;left: 24%;width: 22%;height: 5.5%;" name="employees_id" value="" type="text">
+                                    <input class="abs" style="top: 49%;left: 1.5%;width: 44.5%;height: 10%;" name="employees_name" value="" type="text">
+                                    <input class="abs" name="street_address" value="" style="top: 64%;left: 1.5%;width: 44.5%;height: 5%;" type="text">
+                                    <input class="abs" name="city_town_state" value="" style="top: 74.2%;left: 1.5%;width: 44.5%;height: 5%;" type="text">
+                                    <input class="abs" name="account_number" value="" style="top: 84%;left: 1.5%;width: 44.5%;height: 5.3%;" type="text">
+                                    <input class="abs" name="1" value="" style="top: 10%;left: 47.5%;width: 17%;height: 9.3%;" type="text">
+                                    <input class="abs" name="2" value="" style="top: 25%;left: 47.5%;width: 17%;height: 9.3%;" type="text">
+                                    <input class="abs" name="3" value="" style="top: 40%;left: 48%;width: 16.5%;height: 9.3%;" type="text">
+                                    <input class="abs" name="4" value="" style="top: 42%;left: 67%;width: 16.5%;height: 7.3%;" type="text">
+                                    <input class="abs" name="5" value="" style="top: 54%;left: 47%;width: 17.5%;height: 5.3%;" type="text">
+                                    <input class="abs" name="6" value="" style="top: 68%;left: 47%;width: 36.5%;height: 21.3%;" type="text">
                                     
                                   <!-- fields -->
                               
