--- a/app/views/forms/_form5498.html.erb
+++ b/app/views/forms/_form5498.html.erb
@@ -36,40 +36,40 @@
                              <img width="100%" src="/
 media/5498.png" />
                               <!-- fields -->
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="trustees_issuers_name_address" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="trustees_issuers_fin" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="participants_social_security_number" value="">
+                                    <input class="abs" name="trustees_issuers_name_address" value="" style="top: 9%;left: 1%;width: 45%;height: 20%;" type="text">
+                                    <input class="abs" name="trustees_issuers_fin" value="" style="top: 35%;left: 1%;width: 22%;height: 7%;" type="text">
+                                    <input class="abs" name="participants_social_security_number" value="" style="top: 35%;left: 24%;width: 22%;height: 7%;" type="text">
 
 
 
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="participants_name" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="street_address" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="city_town_state" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="account_number" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="1" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="2" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="3" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="4" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="6" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="7_ira" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="7_sep" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="7_simple" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="7_roth_ira" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="8" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="9" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="10" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="11" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="12a" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="12b" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="13a" value="">
+                                    <input class="abs" name="participants_name" value="" style="top: 45.3%;left: 1%;width: 45%;height: 7%;" type="text">
+                                    <input class="abs" name="street_address" value="" style="top: 55.2%;left: 1%;width: 45%;height: 7%;" type="text">
+                                    <input class="abs" name="city_town_state" value="" style="top: 64.9%;left: 1%;width: 45%;height: 7%;" type="text">
+                                    <input class="abs" name="account_number" value="" style="top: 84.5%;left: 1%;width: 45%;height: 7%;" type="text">
+                                    <input class="abs" style="top: 11%;left: 49%;width: 16%;height: 5%;" name="1" value="" type="text">
+                                    <input class="abs" name="2" value="" style="top: 19.3%;left: 49.2%;width: 16%;height: 3.8%;" type="text">
+                                    <input class="abs" name="3" value="" style="top: 27.3%;left: 49.2%;width: 16%;height: 5.4%;" type="text">
+                                    <input class="abs" name="4" value="" style="top: 27.3%;left: 68.2%;width: 16%;height: 5.5%;" type="text">
+                                    <input class="abs" name="5" value="" style="top: 36.3%;left: 49.2%;width: 16%;height: 5.5%;" type="text">
+                                    <input class="abs" name="6" value="" style="top: 36.3%;left: 74%;width: 10.5%;height: 3.5%;" type="text">
+                                    <input class="abs" name="7_ira" value="" style="" type="text">
+                                    <input class="abs" name="7_sep" value="" style="" type="text">
+                                    <input class="abs" name="7_simple" value="" style="" type="text">
+                                    <input class="abs" name="7_roth_ira" value="" style="" type="text">
+                                    <input class="abs" name="8" value="" style="top: 48.7%;left: 49.2%;width: 16%;height: 3.5%;" type="text">
+                                    <input class="abs" name="9" value="" style="top: 48.7%;left: 68.2%;width: 16%;height: 3.5%;" type="text">
+                                    <input class="abs" name="10" value="" style="top: 55.3%;left: 49.2%;width: 16%;height: 3.5%;" type="text">
+                                    <input class="abs" name="11" value="" style="" type="text">
+                                    <input class="abs" name="12a" value="" style="top: 61.7%;left: 47.2%;width: 18%;height: 3.5%;" type="text">
+                                    <input class="abs" name="12b" value="" style="top: 61.7%;left: 68.2%;width: 16%;height: 3.5%;" type="text">
+                                    <input class="abs" name="13a" value="" style="top: 68.2%;left: 49.2%;width: 16%;height: 3.5%;" type="text">
                                     
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="13b" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="13c" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="14a" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="14b" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="15a" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="15b" value="">
+                                    <input class="abs" name="13b" value="" style="top: 68.2%;left: 66.2%;width: 6%;height: 3.5%;" type="text">
+                                    <input class="abs" name="13c" value="" style="top: 68.2%;left: 73%;width: 11%;height: 3.5%;" type="text">
+                                    <input class="abs" name="14a" value="" style="top: 75%;left: 49%;width: 16%;height: 6.5%;" type="text">
+                                    <input class="abs" name="14b" value="" style="top: 75%;left: 66.3%;width: 17.7%;height: 6.5%;" type="text">
+                                    <input class="abs" name="15a" value="" style="top: 86%;left: 49.3%;width: 15.7%;height: 5.3%;" type="text">
+                                    <input class="abs" name="15b" value="" style="top: 85%;left: 66.3%;width: 17.7%;height: 6.2%;" type="text">
                                   <!-- fields -->
                               
                               <input type="hidden" name="unique_id" value="<%= @form_fields['unique_id'] %>">
